@@ -25,3 +25,9 @@ Version 1.12    18 Feb 2002
 Version 1.13    09 Apr 2002
     Added alternate way for enabling rtscts (CNEW_RTSCTS is tried too)
     If port opening fails, a SerialException is raised on all platforms
+
+Version 1.xx
+    added examples to archive
+    added non-blocking mode for timeout=0 (tnx Mat Martineau)
+    win32 does now return the remaining characters on timeout
+    
